--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./sass/Vendors/Fontawesome/all.min.css">
 
     <!-- ADD SCSS -->
-    <link rel="stylesheet" href="./main.scss">
+    <link rel="stylesheet" href="./sass/main.scss">
 
     <!-- ADD CSS -->
     <link rel="stylesheet" href="./css/style.css">
@@ -25,22 +25,38 @@
         <div class="header__logo-box">
             <img src="./sass/Themes/your-logo.png" alt="My-logo">
         </div>
+        
+        <div class="header__navbar">
+            <ul class="header__navbar-ul">
+                <li class="header__navbar-li" style="border-left: none;">
+                    <p><a href="#" class="header__navbar-link">home</a></p>
+                </li>
+                <li class="header__navbar-li">
+                    <p><a href="#" class="header__navbar-link">home</a></p>
+                </li>
+                <li class="header__navbar-li">
+                    <p><a href="#" class="header__navbar-link">home</a></p>
+                </li>
+                <li class="header__navbar-li">
+                    <p><a href="#" class="header__navbar-link">home</a></p>
+                </li>
+            </ul>
+        </div>
     </header>
-    <div class="header__navbar">
-        <ul class="header__navbar-ul">
-            <li class="header__navbar-li">
-                <a href="#" class="header__navbar-link">home</a>
-            </li>
-            <li class="header__navbar-li">
-                <a href="#" class="header__navbar-link">home</a>
-            </li>
-            <li class="header__navbar-li">
-                <a href="#" class="header__navbar-link">home</a>
-            </li>
-            <li class="header__navbar-li">
-                <a href="#" class="header__navbar-link">home</a>
-            </li>
-        </ul>
+    <div class="heading-primary">
+        <div class="heading-primary--main">
+            <p class="heading-text-main">
+                dai hoc kien giang
+            </p>
+        </div>
+        <div class="heading-primary-sub">
+            <p class="heading-text-sub">
+                dai hoc nhu cai lon que nha nguoi ta
+            </p>
+        </div>
+        <div class="btn">
+
+        </div>
     </div>
 </body>
 
