--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header__logo-box">
             <img src="./sass/Themes/your-logo.png" alt="My-logo">
         </div>
-        
+        <!-- <div class="clearfix"></div> -->
         <div class="header__navbar">
             <ul class="header__navbar-ul">
                 <li class="header__navbar-li" style="border-left: none;">
@@ -42,22 +42,32 @@
                 </li>
             </ul>
         </div>
+        <div class="clearfix"></div>
+        <div class="chars">
+            <p class="chars-text-h">
+                h
+            </p>
+            <p class="chars-text-q">
+                q
+            </p>
+        </div>
+        <div class="heading-primary">
+            <div class="heading-primary--main">
+                <p class="heading-text-main">
+                    dai hoc kien giang
+                </p>
+            </div>
+            <div class="heading-primary--sub">
+                <p class="heading-text-sub">
+                    dai hoc nhu cai lon que nha nguoi ta
+                </p>
+            </div>
+            <div class="btn">
+    
+            </div>
+        </div>
     </header>
-    <div class="heading-primary">
-        <div class="heading-primary--main">
-            <p class="heading-text-main">
-                dai hoc kien giang
-            </p>
-        </div>
-        <div class="heading-primary-sub">
-            <p class="heading-text-sub">
-                dai hoc nhu cai lon que nha nguoi ta
-            </p>
-        </div>
-        <div class="btn">
 
-        </div>
-    </div>
 </body>
 
     <!-- ADD BOOTSTRAP JS -->
