--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- <div class="clearfix"></div> -->
         <div class="header__navbar">
             <ul class="header__navbar-ul">
-                <li class="header__navbar-li" style="border-left: none;">
+                <li class="header__navbar-li">
                     <p><a href="#" class="header__navbar-link">home</a></p>
                 </li>
                 <li class="header__navbar-li">
@@ -44,12 +44,15 @@
         </div>
         <div class="clearfix"></div>
         <div class="chars">
-            <p class="chars-text-h">
+            <div class="chars-text-h">
                 h
-            </p>
-            <p class="chars-text-q">
+            </div>
+            <div class="chars-text-q">
                 q
-            </p>
+            </div>
+        </div>
+        <div class="clearfix">
+
         </div>
         <div class="heading-primary">
             <div class="heading-primary--main">
@@ -62,11 +65,45 @@
                     dai hoc nhu cai lon que nha nguoi ta
                 </p>
             </div>
-            <div class="btn">
-    
-            </div>
+
+        </div>
         </div>
     </header>
+    <div class="clearfix">
+
+    </div>
+    <div class="grid-test">
+        <div class="row">
+            <div class="col-1-of-2">
+                col-1-of-2
+            </div>
+             <div class="col-1-of-2">
+                col-1-of-2
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3">
+                col-1-of-3
+            </div>
+             <div class="col-1-of-3">
+                col-1-of-3
+            </div>
+            <div class="col-1-of-3">
+                col-1-of-3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+             <div class="col-1-of-4">
+                col-1-of-4
+            </div>
+            <div class="col-2-of-4">
+                col-1-of-4
+            </div>
+        </div>
+    </div>
 
 </body>
 
