--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
     <div class="clearfix">
 
     </div>
-    <div class="grid-test">
-        <div class="row">
+    <div class="section__about">
+        <div class="section__about-mid">
+            <div class="section__about-mid-text">
+                <h2 class="section__ablut-mid-text-h2">
+                section about
+                </h2>
+            </div>
+                    <div class="row">
             <div class="col-1-of-2">
                 col-1-of-2
             </div>
@@ -81,30 +87,8 @@
                 col-1-of-2
             </div>
         </div>
-        <div class="row">
-            <div class="col-1-of-3">
-                col-1-of-3
-            </div>
-             <div class="col-1-of-3">
-                col-1-of-3
-            </div>
-            <div class="col-1-of-3">
-                col-1-of-3
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-             <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-            <div class="col-2-of-4">
-                col-1-of-4
-            </div>
         </div>
     </div>
-
 </body>
 
     <!-- ADD BOOTSTRAP JS -->
